fix: hide scrollbar across all browsers and adjust category heading styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+  
+  /* Hide scrollbar for all browsers */
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .scrollbar-hide{
+    scrollbar-width: none;
+  }
